@@ -5394,6 +5394,23 @@ P_X509_get_pubkey_alg(x)
     OUTPUT:
         RETVAL
 
+void
+X509_get_X509_PUBKEY(x)
+   const X509 *x
+   PPCODE:
+   X509_PUBKEY *pkey;
+   STRLEN len;
+   unsigned char *pc, *pi;
+   if (!(pkey = X509_get_X509_PUBKEY(x))) croak("invalid certificate");
+   if (!(len = i2d_X509_PUBKEY(pkey, NULL))) croak("invalid certificate public key");
+   Newx(pc,len,unsigned char);
+   if (!pc) croak("out of memory");
+   pi = pc;
+   i2d_X509_PUBKEY(pkey, &pi);
+   if (pi-pc != len) croak("invalid encoded length");
+   XPUSHs(sv_2mortal(newSVpv((char*)pc,len)));
+   Safefree(pc);
+
 #if OPENSSL_VERSION_NUMBER >= 0x10001000L && !defined(OPENSSL_NO_NEXTPROTONEG)
 
 int
