@@ -1,5 +1,9 @@
 Revision history for Perl extension Net::SSLeay.
 
+????
+     Added X509_get_X509_PUBKEY. Patch supplied by GUILHEM. Thanks.
+
+
 1.72 2015-09-22
      Fixed a problem where SvPVx_nolen was undefined in some versions of
      perl. Reported by Karen Etheridge. Replaced with SvPV_nolen.
